test/fail/errors/FileNotFound.agda
module FileNotFound where

import WildGoose
